Added documentation URL and changed width and height

--- a/camera2.conf
+++ b/camera2.conf
@@ -1,8 +1,10 @@
 camera_name CAM-2
 camera_id 002
 # set your second working device here
-videodevice /dev/video2
+videodevice /dev/video1
 text_left CAM-2
 stream_port 8082
 stream_localhost off
 stream_maxrate = 35
+height 1080
+width 1920
